# Rtlsdr

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/ru/abch/rtlsdr/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  librtlsdr.c  native-lib.cpp  rtl_fm.c  rtl_fm_stereo.c  rtl_fm_streamer.c  rtl_power.c
app/src/main/cpp/convenience/: convenience.c
app/src/main/cpp/jsonrpc-c/: ev.c  jsonrpc-c.h
app/src/main/cpp/libusb/: config.h  descriptor.c  hotplug.c  io.c  libusbi.h  sync.c
app/src/main/cpp/libusb/os/: linux_netlink.c  linux_usbfs.c  poll_posix.c  threads_posix.c
app/src/main/java/ru/abch/rtlsdr/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/ru/abch/rtlsdr/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
